--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,8 @@ $tablet: 1024px;
 #app {
     background: black;
     min-height: 100vh;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
 }
 .story-background {
     height: 100vh;
@@ -25,15 +27,15 @@ $tablet: 1024px;
     }
 }
 h1 {
-  font-family: "Rubik";
+//   font-family: "Rubik";
   font-size: 44pt;
 }
-p, .btn {
-  font-family: "Rubik Distressed";
+p, .btn:not(.dialogue-btn) {
+//   font-family: "Rubik Distressed";
   font-size: 18pt;
 }
 small, .copyright {
-    font-family: "Rubik Distressed";
+    // font-family: "Rubik Distressed";
     font-size: 14pt;
 }
 .wow {
@@ -42,7 +44,7 @@ small, .copyright {
 .no-style-button {
     border:0;
     background:transparent;
-    font-family: "Rubik Distressed";
+    // font-family: "Rubik Distressed";
     font-size: 18pt;
 }
 .stick-bottom {
@@ -86,4 +88,18 @@ small, .copyright {
     @media (min-width: 1025px) {
         margin-top:15vh;
     }
+}
+.dialogue-btn {
+    font-size: 22px;
+    background: transparent;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 0px #181817;
+}
+.dialogue-btn:hover {
+    color: rgb(255, 200, 0);
+}
+.dialogue-container {
+    border-radius: 25px;
+    background: rgba(0, 0, 0, 0.183);
 }
