--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: "Rubik";
-  src: url("../assets/RubikBurned-Regular.ttf")
-}
-
-@font-face {
-  font-family: "Rubik Distressed";
-  src: url("../assets/RubikDistressed-Regular.ttf")
-}
 
 $mobile: 600px;
 $tablet: 1024px;
@@ -14,7 +5,7 @@ $tablet: 1024px;
 #app {
     background: black;
     min-height: 100vh;
-    font-family: 'Roboto Mono', monospace;
+    font-family: "Special Elite", system-ui;
     font-weight: bold;
 }
 .story-background {
@@ -32,7 +23,7 @@ h1 {
 }
 p, .btn:not(.dialogue-btn) {
 //   font-family: "Rubik Distressed";
-  font-size: 18pt;
+  font-size: 14pt;
 }
 small, .copyright {
     // font-family: "Rubik Distressed";
@@ -42,6 +33,7 @@ small, .copyright {
     visibility: hidden;
 }
 .no-style-button {
+    color: rgb(55, 55, 55);
     border:0;
     background:transparent;
     // font-family: "Rubik Distressed";
@@ -59,16 +51,17 @@ small, .copyright {
     background: black;
 }
 .text-rdanger, small {
-    color: red;
+    color: rgb(168, 185, 208);
 }
 .text-underline {
     text-decoration: underline;
 }
 .speech-box {
-    background:white;
-    border-radius: 25px;
+    background:rgba(255, 255, 255, 0.429);
+    backdrop-filter: blur(5px);
+    border: 1px solid rgb(213, 217, 253);
     padding: 20px;
-    box-shadow: 15px 15px black;
+    // box-shadow: 15px 15px 35px rgba(0, 0, 0, 0.508);
 }
 .thought-box {
     background:white;
@@ -90,16 +83,12 @@ small, .copyright {
     }
 }
 .dialogue-btn {
-    font-size: 22px;
+    font-size: 18px;
     background: transparent;
     color: white;
     font-weight: bold;
     text-shadow: 2px 2px 0px #181817;
 }
 .dialogue-btn:hover {
-    color: rgb(255, 200, 0);
-}
-.dialogue-container {
-    border-radius: 25px;
-    background: rgba(0, 0, 0, 0.183);
+    color: rgb(53, 104, 188);
 }
